crates/kirin-prettyless/src/snapshots/kirin_prettyless__tests__document_indent.snap
---
source: crates/kirin-prettyless/src/tests.rs
assertion_line: 167
expression: buf
---
hello
    world
