crates/kirin-prettyless/src/snapshots/kirin_prettyless__tests__pipeline_staged_function_no_specialization.snap
---
source: crates/kirin-prettyless/src/tests.rs
assertion_line: 427
expression: output
---
stage @host fn @extern_fn(int) -> float
