crates/kirin-prettyless/src/snapshots/kirin_prettyless__tests__sprint_with_globals.snap
---
source: crates/kirin-prettyless/src/tests.rs
assertion_line: 296
expression: output
---
fn @my_function(int) -> int {
  ^0 {
    constant 42;
    return %0;
  }
}
